# altitude

./: .gitignore  CMakeLists.txt  README.md
inc/: constants.hpp  formulas.hpp
src/: CMakeLists.txt  main.cpp
