cmake_minimum_required(VERSION 3.4.3 FATAL_ERROR)

project(altitude)

set(CMAKE_VERBOSE_MAKEFILE ON)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED on)
set(CMAKE_VERBOSE_MAKEFILE ON)
set(GLOBAL_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
set(CMAKE_INSTALL_PREFIX ${PROJECT_BINARY_DIR}/install)
set(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake")

include(ExternalProject)
add_subdirectory(src)

if("${LIBRARY_OUTPUT_PATH}" STREQUAL "")
    MESSAGE( WARN " SETTING LIBRARY_OUTPUT_PATH")
    SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
    MESSAGE( STATUS "LIBRARY_OUTPUT_PATH IS:     " ${LIBRARY_OUTPUT_PATH} )
endif()
if("${EXECUTABLE_OUTPUT_PATH}" STREQUAL "")
    MESSAGE( WARN " SETTING EXECUTABLE_OUTPUT_PATH")
    SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
    MESSAGE( STATUS "EXECUTABLE_OUTPUT_PATH IS:     " ${EXECUTABLE_OUTPUT_PATH} )
endif()
if("${CMAKE_MODULE_PATH}" STREQUAL "")
    MESSAGE( WARN " SETTING EXECUTABLE_OUTPUT_PATH")
    SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
    MESSAGE( STATUS "CMAKE_MODULE_PATH IS:     " ${CMAKE_MODULE_PATH} )
endif()